--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .ble{
     height: 100vh;
     background-image: url('../images/HERO.jpg');
@@ -56,22 +60,52 @@
 .container-service {
     padding: 100px;
     background-color: #4bcaff;
-    height: 100vh;
+    height: 85vh;
 }
 
 .serviceText {
     color: white;
     text-transform: uppercase;
     font-size: 3rem;
-    font-weight: bolder;
+    font-weight: lighter;
+    margin-bottom: 120px;
+    margin-left: 35px;
 }
+
 .souligne {
     text-decoration: underline;
 }
 
-.row {
+.cards {
+    color: white;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    align-content: center;
+    justify-content: space-evenly; 
+    font-size: 1.6em;
+    font-weight: lighter;
+    text-align: justify;
+}
+.frameTitle {
+    margin-bottom: 30px;
+    margin-top: 20px;
+}
+
+.coffee {
+    height: 500px;
+    width: 350px;
+}
+
+.instant{
+    height: 500px;
+    width: 350px;
+}
+
+.serious{
+    height: 500px;
+    width: 350px;
+}
+
+.frame{
+    height: 500px;
+    width: 350px;
 }
